samples/_failures_safe/1761696998_9444db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c53964b6.c: In function ‘main’:
./samples/SAFE/__tmp_c53964b6.c:159:27: error: expected ‘;’ at end of input
  159 |                     printf
      |                           ^
      |                           ;
./samples/SAFE/__tmp_c53964b6.c:159:21: error: expected declaration or statement at end of input
  159 |                     printf
      |                     ^~~~~~
./samples/SAFE/__tmp_c53964b6.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c53964b6.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c53964b6.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c53964b6.c:159:21: error: expected declaration or statement at end of input
